config/task-manager/httprouter-backend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: task-manager-backend
  namespace: task-manager
spec:
  parentRefs:
    - name: gateway
      namespace: traefik
      sectionName: http
  hostnames:
    - task-manager-backend.golden-horde.ir
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: backend
          port: 8000
